@@ -32,6 +32,7 @@ version <next>:
 - Interplay ACM demuxer and audio decoder
 - XMA1 & XMA2 decoder
 - realtime filter
+- anoisesrc audio filter source
 
 
 version 2.8:
